--- a/input/styles.scss
+++ b/input/styles.scss
@@ -1,9 +1,8 @@
 
 //header style
-
-.form-control-dark:focus {
-  color: #fff;
-  background-color: var(--bs-dark);
-  border-color: #fff;
-  box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
+@import "variables.scss";
+.nav-btn
+{
+  width: $btn-width;
+  height:$btn-height;
 }
