Aligned and resized button and logo

--- a/output/styles.css
+++ b/output/styles.css
@@ -4,4 +4,10 @@
   height: 3rem;
 }
 
+/* line 10, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+.logo {
+  display: flex;
+  float: left;
+}
+
 /*# sourceMappingURL=styles.css.map */
