--- a/input/styles.scss
+++ b/input/styles.scss
@@ -14,6 +14,13 @@
 
 }
 
+.navbar-style
+{
+height:2em;
+padding:25%;
+
+}
+
 .button {
   background-color: grey; /* Green */
   border: none;
@@ -27,21 +34,48 @@
   cursor: pointer;
 }
 
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+// The container <div> - needed to position the dropdown content 
 .dropdown {
   position: relative;
   display: inline-block;
 }
 
+// Dropdown Content (Hidden by Default). Each background will be a different color, just like example site 
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
   z-index: 1;
 }
 
-.dropdown:hover .dropdown-content {
+// Content inside of the dropdown, removing default link decoration and stacked vertically. Each dropdown will be a different color just like main site  
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
   display: block;
+}
+
+// Change color of dropdown links on hover 
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+// On hover, displays menu. Navbar is hidden on smaller screens, so no need for on click. On focus for those hard of sight
+.dropdown:hover .dropdown:focus .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropdown:focus .dropbtn {
+  background-color: #3e8e41;
 }
