--- a/output/styles.css
+++ b/output/styles.css
@@ -11,6 +11,12 @@
 }
 
 /* line 17, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+.navbar-style {
+  height: 2em;
+  padding: 25%;
+}
+
+/* line 24, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
 .button {
   background-color: grey;
   /* Green */
@@ -24,26 +30,54 @@
   cursor: pointer;
 }
 
-/* line 30, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 37, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* line 47, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
 .dropdown {
   position: relative;
   display: inline-block;
 }
 
-/* line 35, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 53, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 12px 16px;
   z-index: 1;
 }
 
-/* line 45, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.dropdown:hover .dropdown-content {
+/* line 63, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
   display: block;
+}
+
+/* line 71, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+/* line 74, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+.dropdown:hover .dropdown:focus .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+/* line 79, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+.dropdown:hover .dropdown:focus .dropbtn {
+  background-color: #3e8e41;
 }
 
 /*# sourceMappingURL=styles.css.map */
