--- a/output/styles.css
+++ b/output/styles.css
@@ -1,22 +1,27 @@
-/* line 4, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 4, ../../../Desktop/Scion Assignment Hero Image/CSS-HTML-Reflections/input/styles.scss */
 .nav-btn {
   width: 3rem;
   height: 3rem;
 }
 
-/* line 10, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 10, ../../../Desktop/Scion Assignment Hero Image/CSS-HTML-Reflections/input/styles.scss */
 .logo {
   display: flex;
   float: left;
 }
 
-/* line 17, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 17, ../../../Desktop/Scion Assignment Hero Image/CSS-HTML-Reflections/input/styles.scss */
 .navbar-style {
   height: 2em;
   padding: 25%;
 }
 
-/* line 24, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 24, ../../../Desktop/Scion Assignment Hero Image/CSS-HTML-Reflections/input/styles.scss */
+.navflex {
+  display: flex;
+}
+
+/* line 29, ../../../Desktop/Scion Assignment Hero Image/CSS-HTML-Reflections/input/styles.scss */
 .button {
   background-color: grey;
   /* Green */
@@ -30,23 +35,24 @@
   cursor: pointer;
 }
 
-/* line 37, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 42, ../../../Desktop/Scion Assignment Hero Image/CSS-HTML-Reflections/input/styles.scss */
 .dropbtn {
   background-color: #4CAF50;
   color: white;
+  margin: 0 20px 0 20px;
   padding: 16px;
   font-size: 16px;
   border: none;
   cursor: pointer;
 }
 
-/* line 47, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 53, ../../../Desktop/Scion Assignment Hero Image/CSS-HTML-Reflections/input/styles.scss */
 .dropdown {
   position: relative;
   display: inline-block;
 }
 
-/* line 53, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 59, ../../../Desktop/Scion Assignment Hero Image/CSS-HTML-Reflections/input/styles.scss */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -56,7 +62,7 @@
   z-index: 1;
 }
 
-/* line 63, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 69, ../../../Desktop/Scion Assignment Hero Image/CSS-HTML-Reflections/input/styles.scss */
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
@@ -64,18 +70,24 @@
   display: block;
 }
 
-/* line 71, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 77, ../../../Desktop/Scion Assignment Hero Image/CSS-HTML-Reflections/input/styles.scss */
 .dropdown-content a:hover {
   background-color: #f1f1f1;
 }
 
-/* line 74, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 80, ../../../Desktop/Scion Assignment Hero Image/CSS-HTML-Reflections/input/styles.scss */
 .dropdown:hover .dropdown:focus .dropdown-content {
-  display: block;
+  display: flex;
+  flex-direction: column;
+}
+
+/* line 85, ../../../Desktop/Scion Assignment Hero Image/CSS-HTML-Reflections/input/styles.scss */
+footer {
+  width: 75%;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-/* line 79, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 91, ../../../Desktop/Scion Assignment Hero Image/CSS-HTML-Reflections/input/styles.scss */
 .dropdown:hover .dropdown:focus .dropbtn {
   background-color: #3e8e41;
 }
