--- a/input/styles.scss
+++ b/input/styles.scss
@@ -1,6 +1,7 @@
 
 //header style
 @import "variables.scss";
+@import "servicecards.scss";
 .nav-btn
 {
   width: $btn-width;
@@ -39,6 +40,13 @@ padding:25%;
   cursor: pointer;
 }
 
+
+
+.services
+{
+  margin: 0 5% 0 5%;
+}
+
 .dropbtn {
   background-color: #4CAF50;
   color: white;
@@ -49,10 +57,25 @@ padding:25%;
   cursor: pointer;
 }
 
+html
+
 // The container <div> - needed to position the dropdown content 
 .dropdown {
   position: relative;
   display: inline-block;
+}
+
+.jumbotron-style
+{
+  background-image:url("../img/home-oaVs.webp");
+ 
+}
+
+.jumbotron-font
+{
+  color:white;
+  font-weight:bold;
+  text-align: center;
 }
 
 // Dropdown Content (Hidden by Default). Each background will be a different color, just like example site 
