--- a/output/servicecards.css
+++ b/output/servicecards.css
@@ -145,116 +145,4 @@
   color: grey;
 }
 
-/* line 5, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.nav-btn {
-  width: 3rem;
-  height: 3rem;
-}
-
-/* line 11, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.logo {
-  display: flex;
-  float: left;
-}
-
-/* line 18, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.navbar-style {
-  height: 2em;
-  padding: 25%;
-}
-
-/* line 25, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.navflex {
-  display: flex;
-}
-
-/* line 30, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.button {
-  background-color: grey;
-  /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-
-/* line 45, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.services {
-  margin: 0 5% 0 5%;
-}
-
-/* line 50, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  margin: 0 20px 0 20px;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-/* line 60, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-html
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-/* line 68, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.jumbotron-style {
-  background-image: url("../img/home-oaVs.webp");
-}
-
-/* line 74, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.jumbotron-font {
-  color: white;
-  font-weight: bold;
-  text-align: center;
-}
-
-/* line 82, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-/* line 92, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* line 100, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.dropdown-content a:hover {
-  background-color: #f1f1f1;
-}
-
-/* line 103, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.dropdown:hover .dropdown:focus .dropdown-content {
-  display: flex;
-  flex-direction: column;
-}
-
-/* line 108, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-footer {
-  width: 75%;
-}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-/* line 114, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-.dropdown:hover .dropdown:focus .dropbtn {
-  background-color: #3e8e41;
-}
-
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=servicecards.css.map */
