--- a/input/buttons.scss
+++ b/input/buttons.scss
@@ -11,3 +11,15 @@
     @include dropbtn;
     background-color: rgb(25, 24, 24);
 }
+
+.google-review
+{
+    @include dropbtn;
+    background-color:rgb(8, 99, 142);
+}
+
+.trustpilot-review
+{
+    @include dropbtn;
+    background-color:rgb(22, 192, 22)
+}
