--- a/input/styles.scss
+++ b/input/styles.scss
@@ -59,7 +59,11 @@ padding:25%;
   cursor: pointer;
 }
 
-
+.email
+{
+  display: flex;
+  flex-wrap: wrap;
+}
 
 .services
 {
@@ -68,15 +72,21 @@ padding:25%;
   margin: 0 5% 0 5%;
 }
 
-
-
-.dropbtn {
- 
-
-
+.news-image
+{
+  width: 100%;
+  height:50%;
 }
 
-html
+.news-footer
+{
+  margin: 0 5% 0 5%;
+  border-top: 0.5px solid black;
+}
+
+
+
+
 
 // The container <div> - needed to position the dropdown content 
 .dropdown {
