--- a/output/styles.css
+++ b/output/styles.css
@@ -182,6 +182,30 @@
   background-color: #191818;
 }
 
+/* line 15, ../Scion Projects/CSS HTML Reflections/input/buttons.scss */
+.google-review {
+  background-color: #4CAF50;
+  color: white;
+  margin: 0 20px 0 20px;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  background-color: #08638e;
+}
+
+/* line 21, ../Scion Projects/CSS HTML Reflections/input/buttons.scss */
+.trustpilot-review {
+  background-color: #4CAF50;
+  color: white;
+  margin: 0 20px 0 20px;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  background-color: #16c016;
+}
+
 /* line 7, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
 .nav-btn {
   width: 3rem;
@@ -241,33 +265,50 @@
   cursor: pointer;
 }
 
-/* line 64, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 62, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+.email {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* line 68, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
 .services {
   display: flex;
   flex-wrap: wrap;
   margin: 0 5% 0 5%;
 }
 
-/* line 79, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
-html
+/* line 75, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+.news-image {
+  width: 100%;
+  height: 50%;
+}
+
+/* line 81, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+.news-footer {
+  margin: 0 5% 0 5%;
+  border-top: 0.5px solid black;
+}
+
+/* line 92, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
 .dropdown {
   position: relative;
   display: inline-block;
 }
 
-/* line 87, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 97, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
 .jumbotron-style {
   background-image: url("../img/home-oaVs.webp");
 }
 
-/* line 93, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 103, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
 .jumbotron-font {
   color: white;
   font-weight: bold;
   text-align: center;
 }
 
-/* line 101, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 111, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -277,7 +318,7 @@ html
   z-index: 1;
 }
 
-/* line 111, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 121, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
@@ -285,24 +326,24 @@ html
   display: block;
 }
 
-/* line 119, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 129, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
 .dropdown-content a:hover {
   background-color: #f1f1f1;
 }
 
-/* line 122, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 132, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
 .dropdown:hover .dropdown:focus .dropdown-content {
   display: flex;
   flex-direction: column;
 }
 
-/* line 127, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 137, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
 footer {
   width: 75%;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-/* line 133, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
+/* line 143, ../Scion Projects/CSS HTML Reflections/input/styles.scss */
 .dropdown:hover .dropdown:focus .dropbtn {
   background-color: #3e8e41;
 }
