--- a/input/mixins.scss
+++ b/input/mixins.scss
@@ -7,3 +7,18 @@
     border: none;
     cursor: pointer;
   }
+
+  @mixin service-card
+  {
+    text-align: center;
+    border-radius: 5%;
+    padding: 10%;
+    margin: 5% 0 5% 0;
+      display:flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+    width: 100%;
+    border: 1px solid rgb(222, 57, 23);
+    align-items: center;
+
+  }
